<resources>
    <string name="app_name">Timer</string>
    <string name="timer_displayer">0:00:00</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="task_minute_label">タイマーの時間</string>
    <string name="minute_label">分</string>
    <string name="completion_title">どれくらい集中できた？</string>
    <string name="manzoku1">1</string>
    <string name="manzoku2">2</string>
    <string name="manzoku3">3</string>
    <string name="manzoku4">4</string>
    <string name="manzoku5">5</string>
    <string name="next_task_button">次のタスクへ</string>
    <string name="task_name_label">タスク名</string>
    <string name="title_activity_completed_tasks_list">CompletedTasksListActivity</string>
    <string name="activity_completed_tasks_list_title">完了タスク一覧</string>
    <string name="activity_completion_title">集中できた？</string>
    <string name="activity_main">タスクタイマー</string>
</resources>
