<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompletionActivity">

    <TextView
        android:id="@+id/completionTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/completion_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="304dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completionTitle">

        <RadioButton
            android:id="@+id/manzoku1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_star"
            android:gravity="center"
            android:text="@string/manzoku1" />

        <RadioButton
            android:id="@+id/manzoku2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_star"
            android:gravity="center"
            android:text="@string/manzoku2" />

        <RadioButton
            android:id="@+id/manzoku3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_star"
            android:gravity="center"
            android:text="@string/manzoku3" />

        <RadioButton
            android:id="@+id/manzoku4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_star"
            android:gravity="center"
            android:text="@string/manzoku4" />

        <RadioButton
            android:id="@+id/manzoku5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_star"
            android:gravity="center"
            android:text="@string/manzoku5" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>